--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "svg2iconfont",
   "version": "0.0.1",
   "description": "parser svg to iconfont",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
