--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svg2iconfont",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "parser svg to iconfont",
   "main": "src/index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "iconfont"
   ],
   "bin": {
-    "svg2iconfont": "src/bin/index.js"
+    "svg2iconfont": "src/bin/cli.js"
   },
   "author": {
     "name": "helondeng",
