--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "svg2iconfont",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "parser svg to iconfont",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
+    "build": "babel src --out-dir lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -11,7 +12,7 @@
     "iconfont"
   ],
   "bin": {
-    "svg2iconfont": "src/bin/cli.js"
+    "svg2iconfont": "lib/bin/cli.js"
   },
   "author": {
     "name": "helondeng",
